feat: 🎸 di in react project

--- a/.swcrc
+++ b/.swcrc
@@ -12,6 +12,9 @@
     "parser": {
       "syntax": "typescript",
       "tsx": true,
+      "legacyDecorator": true,
+      "decorators": true,
+      "decoratorMetadata": true,
       "dynamicImport": true
     }
   }
