--- a/package.json
+++ b/package.json
@@ -68,10 +68,12 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "inversify": "^6.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "^6.4.1",
-    "react-router-dom": "^6.4.1"
+    "react-router-dom": "^6.4.1",
+    "reflect-metadata": "^0.1.13"
   },
   "husky": {
     "hooks": {
